updated animation CSS

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="preload">
-        <img src="./img/airplane.png" alt="airplane">
+        <img class="airplane" src="./img/airplane.png" alt="airplane">
         <h3>Landing on the website...</h3>
         <img src="./img/cloud.png" alt="cloud1" class="cloud1">
         <img src="./img/cloud.png" alt="cloud2" class="cloud2">
